--- a/mipl.vcxproj
+++ b/mipl.vcxproj
@@ -41,6 +41,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>D:\Program Files (x86)\Intel\Composer XE 2015.4.221\ipp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Program Files (x86)\Intel\Composer XE 2015.4.221\ipp\lib\ia32;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>D:\Program Files (x86)\Intel\Composer XE 2015.4.221\redist\ia32\ipp;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -55,6 +58,8 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreSpecificDefaultLibraries>LIBCMT.lib</IgnoreSpecificDefaultLibraries>
+      <AdditionalDependencies>ippi.lib</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -100,6 +105,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChildView.h" />
+    <ClInclude Include="KDicomD\KDicom.h" />
+    <ClInclude Include="KDicomD\KDicomDS.h" />
+    <ClInclude Include="KDicomD\KDicomElement.h" />
+    <ClInclude Include="KDicomD\KDicomQuery.h" />
+    <ClInclude Include="KDicomD\mlConv.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MIPL.h" />
     <ClInclude Include="Resource.h" />
@@ -108,6 +118,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChildView.cpp" />
+    <ClCompile Include="ChildViewProc.cpp" />
+    <ClCompile Include="KDicomD\KDicomDS.cpp" />
+    <ClCompile Include="KDicomD\KDicomDSDecode.cpp" />
+    <ClCompile Include="KDicomD\KDicomDSEncode.cpp" />
+    <ClCompile Include="KDicomD\KDicomDSJPEG12.cpp" />
+    <ClCompile Include="KDicomD\KDicomDSJPEG16.cpp" />
+    <ClCompile Include="KDicomD\KDicomDSJPEG8.cpp" />
+    <ClCompile Include="KDicomD\KDicomElement.cpp" />
+    <ClCompile Include="KDicomD\KDicomQuery.cpp" />
+    <ClCompile Include="KDicomD\mlConv.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MIPL.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -117,6 +137,11 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MIPL.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="KDicomD\dcmtk\lib\ijg12_vc9.lib" />
+    <Library Include="KDicomD\dcmtk\lib\ijg16_vc9.lib" />
+    <Library Include="KDicomD\dcmtk\lib\ijg8_vc9.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
