--- a/mipl.vcxproj.filters
+++ b/mipl.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="KDicomD">
+      <UniqueIdentifier>{4d9b3efc-12e4-4ce5-8a86-34c47c5b54d0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
@@ -42,6 +45,21 @@
     <ClInclude Include="Resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="KDicomD\KDicom.h">
+      <Filter>KDicomD</Filter>
+    </ClInclude>
+    <ClInclude Include="KDicomD\KDicomDS.h">
+      <Filter>KDicomD</Filter>
+    </ClInclude>
+    <ClInclude Include="KDicomD\KDicomElement.h">
+      <Filter>KDicomD</Filter>
+    </ClInclude>
+    <ClInclude Include="KDicomD\KDicomQuery.h">
+      <Filter>KDicomD</Filter>
+    </ClInclude>
+    <ClInclude Include="KDicomD\mlConv.h">
+      <Filter>KDicomD</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MIPL.cpp">
@@ -56,10 +74,51 @@
     <ClCompile Include="ChildView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDS.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDSDecode.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDSEncode.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomElement.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomQuery.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\mlConv.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDSJPEG8.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDSJPEG12.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="KDicomD\KDicomDSJPEG16.cpp">
+      <Filter>KDicomD</Filter>
+    </ClCompile>
+    <ClCompile Include="ChildViewProc.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MIPL.rc">
       <Filter>리소스 파일</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="KDicomD\dcmtk\lib\ijg8_vc9.lib">
+      <Filter>KDicomD</Filter>
+    </Library>
+    <Library Include="KDicomD\dcmtk\lib\ijg12_vc9.lib">
+      <Filter>KDicomD</Filter>
+    </Library>
+    <Library Include="KDicomD\dcmtk\lib\ijg16_vc9.lib">
+      <Filter>KDicomD</Filter>
+    </Library>
   </ItemGroup>
 </Project>
